# zomi-client

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
configs/: example_annotate_filter.yml  example_client.yml  example_secrets.yml  example_server.yml
docker/: Dockerfile  README.md  docker-compose.yaml  env
docker/rootfs/etc/cont-init.d/: 60-zomi-config.sh
docs/: install.md  matching strategy.md
examples/: EventStartCommand.sh  eventproc.py  install.py  mqttd.py
src/zomi-client/: __init__.py  main.py
src/zomi-client/Client/: main.py
src/zomi-client/Client/Libs/API/: api.py
src/zomi-client/Client/Libs/DB/: db.py  models.py
src/zomi-client/Client/Libs/Media/: pipeline.py
src/zomi-client/Client/Log/: __init__.py
src/zomi-client/Client/Models/: DEFAULTS.py  __init__.py  config.py  shm_data.py  utils.py  validators.py
src/zomi-client/Client/Notifications/: Gotify.py  MQTT.py  Pushover.py  ShellScript.py  zmNinja.py
src/zomi-client/Libs/API/: __init__.py  api.py
src/zomi-client/Libs/DB/: db.py
src/zomi-client/Libs/Media/: pipeline.py
src/zomi-client/Models/: config.py  utils.py  validators.py
src/zomi-client/Notifications/: MQTT.py  Pushover.py  __init__.py  zmNinja.py
src/zomi-client/Shared/: configs.py  envsubst.py  utils.py
src/zomi-client/Shared/Models/: Enums.py  config.py  env_vars.py  validators.py
src/zomi_client/: __init__.py  main.py
src/zomi_client/Libs/API/: api.py  mlapi.py
src/zomi_client/Libs/DB/: __init__.py  db.py
src/zomi_client/Libs/Media/: pipeline.py
src/zomi_client/Log/: __init__.py  handlers.py
src/zomi_client/Models/: DEFAULTS.py  Enums.py  config.py  utils.py
src/zomi_client/Notifications/: CoolDown.py  Gotify.py  MQTT.py  Pushover.py  ShellScript.py  ntfy.py  zmNinja.py
