[build-system]
requires = ["setuptools>=65.5.1", "wheel>=0.38.2"]
build-backend = "setuptools.build_meta"


[project]
name = "zomi_client"
version = "0.0.1a5"
dependencies = [
    # We install into its own Venv,
    # if the user has opencv with CUDA they can override themselves
    "opencv-contrib-python-headless>=4.8.1.78",
    'prometheus-client>=0.17.1',
    "numpy>=1.21.4",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "urllib3>=2.0.7",
    "pyyaml>=6.0",
    "cryptography>=41.0.5",
    "psutil>=5.9.6",
    "psutil-extra>=0.2.0",
    "sqlalchemy>=2.0.22",
    "pymysql>=1.1.0",
    "shapely>=2.0.2",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "dateparser>=1.1.8",
    "paho-mqtt>=1.6.1",
    "uvloop>=0.19.0",
    "aiohttp>=3.8.6",

    "aiomysql>=0.2.0",
]

authors = [
  { name="baudneo", email="baudneo@protonmail.com" },
]
readme = "README.md"

requires-python = ">=3.8"
keywords = ["zoneminder", "object_detection", "machine_learning", "facial_recognition", "CUDA" ]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Server",
]

[project.urls]
"Repository" = "https://github.com/baudneo/zomi-client"
"Bug Tracker" = "https://github.com/baudneo/zomi-client/issues"

#[project.optional-dependencies]



[tool.setuptools.packages.find]
## All the following settings are optional:
where = ["src"]  # ["."] by default
#include = ["mypackage*"]  # ["*"] by default
exclude = ["tests*", "examples*", "data*", "configs*"]  # empty by default
##namespaces = false  # true by default

